--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ npm-debug.log
 
 # Files matching config/*.secret.exs pattern contain sensitive
 # data and you should not commit them into version control.
+
+# dialyzer files
+priv/plts/*.plt*
+
 #
 # Alternatively, you may comment the line below and commit the
 # secrets files as long as you replace their contents by environment
