--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,15 +36,14 @@ jobs:
         run: MIX_ENV=dev mix dialyzer
       - name: Set env.HEAD_TAG
         run: |
-          echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
-          echo "env.HEAD_TAG: '$HEAD_TAG'"
-      - name: Push Docker Images if New Tag ${{ env.HEAD_TAG }}
+          echo "head_tag=$(git tag --points-at HEAD)" >> $GITHUB_ENV
+      - name: Push Docker Images if New Tag ${{ env.head_tag }}
+        if: env.head_tag != ''
         run: |
           echo "$DOCKER_PASSWORD" | docker login docker.pkg.github.com -u $DOCKER_USERNAME --password-stdin
           docker build -f Dockerfile \
-                       -t docker.pkg.github.com/hez/elixir-cellar/elixir-cellar:$HEAD_TAG .
-          docker push docker.pkg.github.com/hez/elixir-cellar/elixir-cellar:$HEAD_TAG
-        if: env.HEAD_TAG != ''
+                       -t docker.pkg.github.com/hez/elixir-cellar/elixir-cellar:$head_tag.
+          docker push docker.pkg.github.com/hez/elixir-cellar/elixir-cellar:$head_tag
         env:
           DOCKER_USERNAME: ${{ github.actor }}
           DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
