--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Compile with warnings
         run: mix do compile --warnings-as-errors
       - name: Dialyzer
-        run: MIX_ENV=dev mix dialyzer
+        run: mix dialyzer
       - name: Set env.HEAD_TAG
         run: |
           echo "head_tag=$(git tag --points-at HEAD)" >> $GITHUB_ENV
