--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,7 +42,8 @@ jobs:
         run: |
           echo "$DOCKER_PASSWORD" | docker login docker.pkg.github.com -u $DOCKER_USERNAME --password-stdin
           docker build -f Dockerfile \
-                       -t docker.pkg.github.com/hez/elixir-cellar/elixir-cellar:$head_tag.
+                       -t docker.pkg.github.com/hez/elixir-cellar/elixir-cellar:$head_tag \
+                       .
           docker push docker.pkg.github.com/hez/elixir-cellar/elixir-cellar:$head_tag
         env:
           DOCKER_USERNAME: ${{ github.actor }}
