--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,9 +42,9 @@ jobs:
         run: |
           echo "$DOCKER_PASSWORD" | docker login docker.pkg.github.com -u $DOCKER_USERNAME --password-stdin
           docker build -f Dockerfile \
-                       -t docker.pkg.github.com/hez/elixir-cellar/elixir-cellar:$head_tag \
+                       -t ghcr.io/hez/cellar:$head_tag \
                        .
-          docker push docker.pkg.github.com/hez/elixir-cellar/elixir-cellar:$head_tag
+          docker push ghcr.io/hez/cellar:$head_tag
         env:
           DOCKER_USERNAME: ${{ github.actor }}
           DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
