--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,9 @@ npm-debug.log
 /assets/node_modules/
 
 # Since we are building assets from assets/,
-# we ignore priv/static. You may want to comment
+# we ignore priv/static/assets. You may want to comment
 # this depending on your deployment strategy.
-/priv/static/
+/priv/static/assets
 
 # Files matching config/*.secret.exs pattern contain sensitive
 # data and you should not commit them into version control.
